--- a/src/main/java/com/obiscr/chatgpt/settings/OpenAISettingsPanel.form
+++ b/src/main/java/com/obiscr/chatgpt/settings/OpenAISettingsPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="myMainPanel" layout-manager="GridLayoutManager" row-count="10" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="858" height="739"/>
+      <xy x="20" y="20" width="1244" height="739"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -278,7 +278,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="be5ba" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="be5ba" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="4" use-parent-layout="false"/>
@@ -402,6 +402,24 @@
                 </constraints>
                 <properties>
                   <text value="Enable line wrap of question area"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="278b8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="c7fea" class="javax.swing.JCheckBox" binding="enableAvatarCheckBox">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Enable Avatar"/>
                 </properties>
               </component>
             </children>
